# go-size-analyzer

./: .gitignore  .gitmodules  .golangci.yaml  .goreleaser.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GoNM.cpp  GoNM.h  README.md  README_zh-CN.md  README_zh_CN.md  SECURITY.md  build.rs  command.go  go.mod  go.sum  main.cpp  main.go  typos.toml  utils.cpp  utils.h  version.go  version_test.go
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  codecov.yml  dependabot.yml  typos.toml
.github/actions/setup-script/: action.yml
.github/actions/setup-ui-deps/: action.yml
.github/workflows/: bloaty.yml  build-explorer.yml  build-gsa.yml  build-ui.yml  build-wasm.yml  build-webui.yml  build.yml  build_ui.yml  built-tests.yml  codeql.yml  dependency-review.yml  lint.yml  release.yml  scorecard.yml  tests-ui.yml  tests.yml  typo.yml
cmd/gsa/: command.go  entry.go  init.go  main.go  pgo_main.go  profiler_main.go  version.go
cmd/wasm/: main_js_wasm.go  main_wasm.go
go-size-view/: addr.go  analyze.go  disasm.go  meta.go  package.go  section.go  static.go  symbol.go  tool.go
go-size-view/disasm/: elf.go  extract.go  interface.go  opener.go  pe.go
go-size-view/objfile/: disasm.go  elf.go  macho.go  objfile.go  pe.go  util.go
internal/: addr.go  analyze.go  analyze_test.go  collect.go  dependencies.go  disasm.go  disasm_wasm.go  function.go  knownaddr.go  knowninfo.go  package.go  result.go  section.go  section_test.go  static.go  symbol.go  type.go  utils.go
internal/constant/: const.go
internal/diff/: diff.go  diff_test.go  load.go  load_test.go  printer.go  printer_test.go  result.go  result_test.go  utils.go  utils_test.go
internal/disasm/: doc.go  extract.go  interface.go  interface_test.go  x86_pattern.go
internal/dwarf/: dwarf.go  dwarf_info.go  dwarf_info_test.go  read.go  utils.go  utils_test.go
internal/entity/: addr.go  addr_test.go  analyzer.go  coverage.go  coverage_test.go  file.go  file_js_wasm.go  file_marshaler.go  file_normal.go  file_test.go  function.go  knownaddr.go  meta.go  package.go  package_js_wasm.go  package_marshaler.go  pcln_symbol.go  section.go  section_js_wasm.go  section_marshaler.go  sectionstore.go  sectionstore_test.go  space.go  space_test.go  symbol.go  symbol_js_wasm.go  symbol_marshaler.go  symbol_test.go  type.go
internal/entity/marshaler/: file_normal.go
internal/global/: global.go
internal/knowninfo/: collect.go  dependencies.go  disasm.go  disasm_js_wasm.go  dwarf.go  dwarf_info.go  dwarf_info_test.go  dwarf_test.go  imports.go  imports_wasm.go  knowninfo.go  pclntab.go  pclntab_test.go  section.go  symbol.go  symbol_test.go  testhelper_test.go  typinfo.go  typinfo_test.go
internal/printer/: console.go  formats.go  html.go  json.go  json_xgo_test.go  options.go  svg.go
internal/printer/wasm/: obj_js_wasm.go
internal/result/: result.go  result_js_wasm.go  result_js_wasm_test.go  result_marshaler.go  result_marshaler_test.go  result_test.go  resultutils_test.go
internal/result/testdata/: result.json
internal/section/: section.go  section_test.go
internal/server/: server.go  server_test.go
internal/test/: test.go
internal/test/testutils/: utils.go
internal/third/trie/: bench_test.go  common.go  path_trie.go  rune_trie.go  (+2 more)
internal/tool/: progress.go
internal/tui/: adapter.go  const.go  detail_model.go  detail_model_test.go  item.go  key.go  layout.go  layout_test.go  main_model.go  main_model_test.go  model.go  reconcile.go  scrollbar.go  scrollbar_test.go  style.go  table.go  table_internal.go  table_internal_test.go  tui.go  tui_test.go  update.go  view.go  wrapper.go  wrapper_test.go
internal/ui/: embed.go  embed_test.go  net.go
internal/utils/: addr.go  addr_test.go  binary.go  debug.go  debug_debug.go  gc.go  gc_wasm.go  log.go  log_test.go  map.go  map_test.go  once.go  output.go  progress.go  reader.go  reader_test.go  set.go  set_test.go  signal.go  table.go  utils.go  utils_test.go
internal/web/: server.go  server_test.go
internal/webui/: embed.go  embed_test.go  flag.go  net.go  net_test.go  server.go  server_test.go  ut_test.go  webui_test.go
internal/wrapper/: elf.go  elf_test.go  macho.go  macho_test.go  pe.go  pe_test.go  static.go  wasm.go  wasm_future.go  wasm_test.go  wrapper.go  wrapper_test.go
patch/bloaty/: CMakeLists.txt  lib.cc  wrapper.h
pkg/: addr.go  analyze.go  collect.go  disasm.go  knowninfo.go  meta.go  package.go  pass.go  result.go  section.go  static.go  symbol.go  type.go
pkg/disasm/: elf.go  interface.go  macho.go  pe.go  wrapper.go  x86_pattern.go
pkg/tool/: tool.go
pkg/wrapper/: pe.go
research/: addr.go  download.py  go.mod  go.sum  print.py  research.go
scripts/: .gitignore  binaries.csv  define.py  download.py  ensure.py  example.py  example_download.py  generate.py  gsa.py  merge.py  parser.py  pgo.py  pyproject.toml  remote.py  report.py  requirements.txt  research.go  skip.csv  skip.txt  tests.py  utils.py  wasm.py
scripts/lib/: example.py  generate.py  gsa.py  merge.py  remote.py  utils.py
scripts/research/: .gitignore  go.mod  watch.py
scripts/tool/: gsa.py  html.py  junit.py  matplotlib.py  merge.py  process.py  remote.py  svgo.py  usage_graph.py  utils.py
src/: artifact.rs  bloaty.rs  cli.rs  elf.rs  go.rs  go_symbol.rs  main.rs  object.rs  parse.rs  utils.rs  web.rs
src/web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
test/: Taskfile.yml  download.py  print.py  test.go
testdata/: result.json
testdata/wasm/: main.go  test.wasm
ui/: .eslintrc.cjs  .gitignore  README.md  common.ts  eslint.config.mjs  index-explorer.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.common.ts  vite.config-explorer.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
ui/src/: App.tsx  Node.tsx  Tooltip.test.tsx  Tooltip.tsx  TreeMap.tsx  Treemap.test.tsx  Treemap.ts  base.scss  cache.ts  entry.ts  explorer_main.tsx  gsa.d.ts  id.ts  index.css  main.tsx  schema.ts  style.scss  testhelper.ts  utils.ts  vite-env.d.ts
(+46 files in other folders)
