[package]
name = "go-size-view"
version = "0.1.0"
edition = "2021"
description = "Analysis golang compiled binary size"
authors = ["Zxilly <zxilly@outlook.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/Zxilly/go-size-view"
repository = "https://github.com/Zxilly/go-size-view"
categories = ["command-line-interface"]
build = "build.rs"

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo", "std"] }
csv = "1.2.1"
gimli = "0.27.2"
object = "0.30.3"
regex = "1.7.1"
typed-arena = "2.0.2"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"

[[bin]]
name = "gsv"
path = "src/main.rs"

[build-dependencies]
cmake = "0.1.49"
