[package]
name = "go-size-view"
version = "0.1.0"
edition = "2021"
description = "Analysis golang compiled binary size"
authors = ["Zxilly <zxilly@outlook.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/Zxilly/go-size-view"
repository = "https://github.com/Zxilly/go-size-view"
categories = ["command-line-interface"]
build = "build.rs"

[dependencies]
actix-web = "4.3.1"
clap = { version = "4.1.8", features = ["derive", "cargo", "std"] }
csv = "1.2.1"
gimli = "0.27.2"
object = "0.30.3"
once_cell = "1.17.1"
regex = "1.7.1"
tokio = { version = "1.26.0", features = ["rt-multi-thread"]}
typed-arena = "2.0.2"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"

[[bin]]
name = "gsv"
path = "src/main.rs"

[build-dependencies]
cmake = "0.1.49"
pkg-config = "0.3.26"

[package.metadata.deb]
section = "utility"
priority = "optional"
license-file = ["LICENSE", "4"]
assets = [
    ["target/release/gsv", "usr/bin/gsv", "755"],
    ["README.md", "usr/share/doc/znotify/README", "644"],
]
