[project]
name = "gsa-scripts"
version = "0.1.0"
authors = ["Zxilly <zxilly@outlook.com>"]
description = "Scripts for GSA"
requires-python = ">=3.13"
dependencies = [
    "markdown-strings>=3.4.0",
    "matplotlib>=3.10.8",
    "psutil>=7.2.2",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
research = [
    "watchdog>=6.0.0",
]
